# ImageWebScraper

./: .gitignore  IWS.py  README.md  main.py  pyproject.toml
utils/: utils.py
